--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@ p, h1, h2, h3, h4, h5, h6, div{
   color: #00fff2;
 }
 
+/* title */
+
+.title {
+  font-size: 50px;
+}
+
 /* makes link text same as normal text */
 
 a {
