--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 
 p, h1, h2, h3, h4, h5, h6, div{
-  padding: 1%;
+  padding-left: 1%;
   color: #00fff2;
 }
 
@@ -103,6 +103,12 @@ border-radius: 12px;
   font-size: 20px
 }
 
+/* home */
+.riitag {
+  display: block;
+  text-align: center;
+}
+
 /* GMOD */
 
 video{
@@ -147,4 +153,9 @@ color: rgb(0, 71, 73);
 .cardrip {
   display: block;
   text-align: center;
+}
+
+/* Socials */
+.discord {
+  padding-left: 2%;
 }
