--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,24 @@ iframe {
   color: #000000;
 }
 
+.spin  {
+  -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+  }
+  @-moz-keyframes spin {
+  100% {
+  -moz-transform: rotate(360deg);
+  }
+  }
+  @-webkit-keyframes spin {
+  100% {
+  -webkit-transform: rotate(360deg);
+  }
+  }
+  @keyframes spin {
+  100% {
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+  }
+  }
