--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,56 @@
 /* All */
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:display=swap');
 @font-face { font-family: Wii; src: url('assets/fonts/Wii.ttf'); } 
+
+
 
 a, body {
   text-decoration:none;
-  color:#37cecb;
-  font-family: Quicksand;
+  color:#000000;
+  font-family: Comfortaa;
   text-align: center;
+  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 4s; /* Firefox < 16 */
+      -ms-animation: fadein 4s; /* Internet Explorer */
+       -o-animation: fadein 4s; /* Opera < 12.1 */
+          animation: fadein 4s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 a:hover {
-  color: rgb(18, 115, 124);
+  color: rgb(68, 68, 68);
 }
 
 body {
-  background-color: #0c3b3b;
+  background-color: #ffffff;
 }
 
 
@@ -22,15 +58,14 @@ body {
 /* Home */
 
 .logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
+  width: 300px;
+  height: 300px;
+  margin-top: 100px;
 }
 
-.links {
-  font-family: Quicksand;
-  font-size: 40px;
+.belowlogo {
+  font-size: x-large;
+  margin-left: -25px;
   text-align: center;
 }
 
