--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,22 @@ a, body {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
+
+.floating { 
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+}
+
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 15px); }
+  100%   { transform: translate(0, -0px); }   
+}
+
 a:hover {
   color: rgb(68, 68, 68);
 }
