--- a/assets/css/h-ticker.css
+++ b/assets/css/h-ticker.css
@@ -1,7 +1,7 @@
 /* (A) FIXED WRAPPER */
 .hwrap {
     overflow: hidden; /* HIDE SCROLL BAR */
-    background: #eee;
+    background: #2a2a2a;
   }
    
   /* (B) MOVING TICKER WRAPPER */
