*finally* fixed google fonts

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* All */
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 @font-face { font-family: Wii; src: url('assets/fonts/Wii.ttf'); } 
 
 a, body {
