--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 /* All */
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+@font-face {
+  font-family: 'Comfortaa';
+  src: url(https://fonts.gstatic.com/s/comfortaa/v30/1Pt_g8LJRfWJmhDAuUsSQamb1W0lwk4S4TbMDr4fIA9c.woff2) format('woff2');
+}
 @font-face { font-family: Wii; src: url('assets/fonts/Wii.ttf'); } 
 
 a, body {
