ok ACTUALLY fixed it i think

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Comfortaa';
-  src: url(https://fonts.gstatic.com/s/comfortaa/v30/1Pt_g8LJRfWJmhDAuUsSQamb1W0lwk4S4TbMDr4fIA9c.woff2) format('woff2');
+  src: url(assets/fonts/Comfortaa.ttf);
 }
 @font-face { font-family: Wii; src: url('assets/fonts/Wii.ttf'); } 
 
